syntax = "proto3";
package main;

option go_package = "./protobufs";

message ExpectedStateVariable {
    int64 var1 = 1;
    string var2 = 2;
}

// service for initial handshake
service PingRPC {
    rpc PingCheck (PingMessage) returns (PingResponse) {}
}

message PingMessage {
}

message PingResponse {
    string ping = 1;
}

// service for Actuator Check with Desired variables. This returns if expected and desired state matches
service Actuator {
    rpc ContractStateCheck (ContractVariableState) returns (ContractVariableStateCheck) {}
}

message ContractVariableStateCheck {
    string stateCheck = 1;
    string stateMessage = 2;
}

message ContractVariableState {
    int64 var1 = 1;
    string var2 = 2;
}